--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: auto;
 }
 
 .width {
@@ -36,5 +37,12 @@ section {
 
 .top-banner {
     background-image: url(images/top-banner.png);
+
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
